# pcode-emulator-rs

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  build.rs  compile.sh  example.c  example.exec2  example.executable  fib.c  file.json  i386-pc-linux-gnu.instructions.pcrs  i386-pc-linux-gnu.pcode  instructions  instructions.txt  log  pypcode.Dockerfile  readme.md  registers.txt  run.sh  segments.json  setup.rs  simple.c  symbol_table  thing
.cargo/: config.toml
binaries/: i386-pc-linux-gnu.simple.objdump  x86_64-pc-linux-gnu.nm
include/: bridge.hh
sleigh/: Cargo.toml  Makefile
sleigh-sys/: Cargo.toml  build.rs
sleigh-sys/bridge/: bridge.cc  bridge.hh
sleigh-sys/src/: lib.rs
sleigh/examples/: lift.rs
sleigh/src/: lib.rs
src/: arbint.rs  binary.rs  bridge.cc  cli.rs  command.rs  inspector.rs  lib.rs  main.rs  symbol_table.rs  util.rs
src/binary/: mod.rs  readobj.rs
src/emulator/: emulator.rs  machine.rs  mod.rs  space.rs
src/sleigh/: address.rs  disassembly.rs  disassembly_instruction.rs  mod.rs  sleigh_bridge.rs
src/ui/: mod.rs
tests/adder/: main.c
tests/cmp/: main.c
tests/fib/: bin  main.c
tests/fib_iter/: bin  main.c
tests/leibniz_pi/: bin  main.c
tests/recursion/: bin  main.c
tests/simple/: bin  main.c
ui/: Cargo.toml
ui/src/: data.rs  main.rs  shared.rs  task.rs
