cmake_minimum_required(VERSION 3.27)
project(pcode)

set(CMAKE_CXX_STANDARD 14)

include_directories(include)
include_directories(sleigh)

add_library(pcode
        include/bridge.hh
        sleigh/action.cc
        sleigh/action.hh
        sleigh/address.cc
        sleigh/address.hh
        sleigh/architecture.cc
        sleigh/architecture.hh
        sleigh/bfd_arch.cc
        sleigh/bfd_arch.hh
        sleigh/block.cc
        sleigh/block.hh
        sleigh/blockaction.cc
        sleigh/blockaction.hh
        sleigh/callgraph.cc
        sleigh/callgraph.hh
        sleigh/capability.cc
        sleigh/capability.hh
        sleigh/cast.cc
        sleigh/cast.hh
        sleigh/codedata.cc
        sleigh/codedata.hh
        sleigh/comment.cc
        sleigh/comment.hh
        sleigh/comment_ghidra.cc
        sleigh/comment_ghidra.hh
        sleigh/condexe.cc
        sleigh/condexe.hh
        sleigh/consolemain.cc
        sleigh/context.cc
        sleigh/context.hh
        sleigh/coreaction.cc
        sleigh/coreaction.hh
        sleigh/cover.cc
        sleigh/cover.hh
        sleigh/cpool.cc
        sleigh/cpool.hh
        sleigh/cpool_ghidra.cc
        sleigh/cpool_ghidra.hh
        sleigh/crc32.cc
        sleigh/crc32.hh
        sleigh/database.cc
        sleigh/database.hh
        sleigh/database_ghidra.cc
        sleigh/database_ghidra.hh
        sleigh/doccore.hh
        sleigh/docmain.hh
        sleigh/double.cc
        sleigh/double.hh
        sleigh/dynamic.cc
        sleigh/dynamic.hh
        sleigh/emulate.cc
        sleigh/emulate.hh
        sleigh/emulateutil.cc
        sleigh/emulateutil.hh
        sleigh/error.hh
        sleigh/filemanage.cc
        sleigh/filemanage.hh
        sleigh/float.cc
        sleigh/float.hh
        sleigh/flow.cc
        sleigh/flow.hh
        sleigh/fspec.cc
        sleigh/fspec.hh
        sleigh/funcdata.cc
        sleigh/funcdata.hh
        sleigh/funcdata_block.cc
        sleigh/funcdata_op.cc
        sleigh/funcdata_varnode.cc
        sleigh/ghidra_arch.cc
        sleigh/ghidra_arch.hh
        sleigh/ghidra_context.cc
        sleigh/ghidra_context.hh
        sleigh/ghidra_process.cc
        sleigh/ghidra_process.hh
        sleigh/ghidra_translate.cc
        sleigh/ghidra_translate.hh
        sleigh/globalcontext.cc
        sleigh/globalcontext.hh
        sleigh/grammar.cc
        sleigh/grammar.hh
        sleigh/graph.cc
        sleigh/graph.hh
        sleigh/heritage.cc
        sleigh/heritage.hh
        sleigh/ifacedecomp.cc
        sleigh/ifacedecomp.hh
        sleigh/ifaceterm.cc
        sleigh/ifaceterm.hh
        sleigh/inject_ghidra.cc
        sleigh/inject_ghidra.hh
        sleigh/inject_sleigh.cc
        sleigh/inject_sleigh.hh
        sleigh/interface.cc
        sleigh/interface.hh
        sleigh/jumptable.cc
        sleigh/jumptable.hh
        sleigh/libdecomp.cc
        sleigh/libdecomp.hh
        sleigh/loadimage.cc
        sleigh/loadimage.hh
        sleigh/loadimage_bfd.cc
        sleigh/loadimage_bfd.hh
        sleigh/loadimage_ghidra.cc
        sleigh/loadimage_ghidra.hh
        sleigh/loadimage_xml.cc
        sleigh/loadimage_xml.hh
        sleigh/memstate.cc
        sleigh/memstate.hh
        sleigh/merge.cc
        sleigh/merge.hh
        sleigh/op.cc
        sleigh/op.hh
        sleigh/opbehavior.cc
        sleigh/opbehavior.hh
        sleigh/opcodes.cc
        sleigh/opcodes.hh
        sleigh/options.cc
        sleigh/options.hh
        sleigh/override.cc
        sleigh/override.hh
        sleigh/paramid.cc
        sleigh/paramid.hh
        sleigh/partmap.hh
        sleigh/pcodecompile.cc
        sleigh/pcodecompile.hh
        sleigh/pcodeinject.cc
        sleigh/pcodeinject.hh
        sleigh/pcodeparse.cc
        sleigh/pcodeparse.hh
        sleigh/pcoderaw.cc
        sleigh/pcoderaw.hh
        sleigh/prefersplit.cc
        sleigh/prefersplit.hh
        sleigh/prettyprint.cc
        sleigh/prettyprint.hh
        sleigh/printc.cc
        sleigh/printc.hh
        sleigh/printjava.cc
        sleigh/printjava.hh
        sleigh/printlanguage.cc
        sleigh/printlanguage.hh
        sleigh/rangemap.hh
        sleigh/rangeutil.cc
        sleigh/rangeutil.hh
        sleigh/raw_arch.cc
        sleigh/raw_arch.hh
        sleigh/ruleaction.cc
        sleigh/ruleaction.hh
        sleigh/rulecompile.cc
        sleigh/rulecompile.hh
        sleigh/semantics.cc
        sleigh/semantics.hh
        sleigh/sleigh.cc
        sleigh/sleigh.hh
        sleigh/sleigh_arch.cc
        sleigh/sleigh_arch.hh
        sleigh/sleighbase.cc
        sleigh/sleighbase.hh
        sleigh/sleighexample.cc
        sleigh/slgh_compile.cc
        sleigh/slgh_compile.hh
        sleigh/slghparse.cc
        sleigh/slghparse.hh
        sleigh/slghpatexpress.cc
        sleigh/slghpatexpress.hh
        sleigh/slghpattern.cc
        sleigh/slghpattern.hh
        sleigh/slghscan.cc
        sleigh/slghsymbol.cc
        sleigh/slghsymbol.hh
        sleigh/space.cc
        sleigh/space.hh
        sleigh/string_ghidra.cc
        sleigh/string_ghidra.hh
        sleigh/stringmanage.cc
        sleigh/stringmanage.hh
        sleigh/subflow.cc
        sleigh/subflow.hh
        sleigh/test.cc
        sleigh/test.hh
        sleigh/testfunction.cc
        sleigh/testfunction.hh
        sleigh/transform.cc
        sleigh/transform.hh
        sleigh/translate.cc
        sleigh/translate.hh
        sleigh/type.cc
        sleigh/type.hh
        sleigh/typegrp_ghidra.cc
        sleigh/typegrp_ghidra.hh
        sleigh/typeop.cc
        sleigh/typeop.hh
        sleigh/types.h
        sleigh/unify.cc
        sleigh/unify.hh
        sleigh/userop.cc
        sleigh/userop.hh
        sleigh/variable.cc
        sleigh/variable.hh
        sleigh/varmap.cc
        sleigh/varmap.hh
        sleigh/varnode.cc
        sleigh/varnode.hh
        sleigh/xml.cc
        sleigh/xml.hh
        sleigh/xml_arch.cc
        sleigh/xml_arch.hh
        src/bridge.cc)
