[package]
name = "pcode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.79" }
clap = { version = "4.4.18", features = ["derive"] }
eframe = "0.25.0"
hashbrown = "0.14.3"
itertools = "0.12.1"
serde = "1.0.196"
serde_derive = "1.0.196"
sleigh = { path = "sleigh" }
#sleigh = { git="https://github.com/Molkars/sleigh", features = ["serde"] }
env_logger = "0.11.1"
serde_value = { git = "https://github.com/Molkars/serde_value", version = "0.1.0" }
num = "0.4.1"
backtrace = "0.3.69"
serde_json = "1.0.111"
bytemuck = "1.14.1"
sleigh-sys = { version = "0.1.0", path = "sleigh-sys" }

[workspace]
members = ["sleigh", "sleigh-sys"]
