[package]
name = "pcode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
clap = { version = "4.4.18", features = ["derive"] }
hashbrown = "0.14.3"
itertools = "0.12.1"
serde = "1.0.196"
serde_derive = "1.0.196"
sleigh = { path = "sleigh" }
sleigh-sys = { version = "0.1.0", path = "sleigh-sys" }
num = "0.4.1"
serde_json = "1.0.111"

[workspace]
members = ["sleigh", "sleigh-sys"]

[features]
default = []
